[package]
name = "p2p-net"
version = "0.1.0"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
