[package]
name = "p2p-net"
version = "0.1.0"
authors = ["LazyMechanic <asharnrus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0.0"
clap = "3.0.0-beta.2"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4", features = ["std", "serde"] }
#log4rs = "1.0.0"
env_logger = "0.8.3"
pin-project = "1.0.5"
rand = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.0", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = "0.3"
